<resources>

    <!--  Menu Strings  -->
    <string name="app_name">SmartParentalApp</string>
    <string name="dashboardPage">Dashboard</string>
    <string name="setRestrictionsPage">Restrictions</string>
    <string name="childrenAllowedPage">Allowed Activities</string>
    <string name="locationPage">Location</string>
    <string name="profilePage">Profile</string>
    <string name="loginPage">Login</string>
    <string name="registerPage">Register</string>

    <!--  Label Strings  -->
    <string name="enterEmail">Enter Email here...</string>
    <string name="enterPassword">Enter Password here...</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="loginLabel">LOGIN</string>
    <string name="signInAccount">SIGN IN</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="createParentAccount">CREATE PARENT ACCOUNT</string>
    <string name="createChildAccount">CREATE CHILD ACCOUNT</string>
    <string name="registerBackButton">BACK</string>
    <string name="logoutLabel">LOGOUT</string>
    <string name="refreshButton">REFRESH</string>

    <!--  Dialog Strings  -->
    <string name="okButton">Ok</string>
    <string name="noButton">No</string>
    <string name="yesButton">Yes</string>
    <string name="title_activity_register_role_selection">RegisterRoleSelectionActivity</string>

    <!--  Parent Register Strings  -->
    <string name="titleRegisterChild">Child Registration Form</string>
    <string name="registerButtonChild">Register</string>
    <string name="displayParentName">Enter a display name</string>

    <!--  Child Register Strings  -->
    <string name="titleRegisterParent">Parent Registration Form</string>
    <string name="registerButtonParent">Register</string>
    <string name="displayChildName">Enter a display name</string>
    <string name="generatedCode">Enter generated code</string>

    <!--  Profile Strings  -->
    <string name="myProfileTitle">My Profile</string>
    <string name="personalProfileTitle">Personal Profile</string>
    <string name="generatedCodeButton">GENERATE CODE</string>
    <string name="generatedCodeHelperText">Use this code to register child account</string>

    <!--  Service Strings  -->
    <string name="locationServiceTitle">Location Service</string>
    <string name="locationServiceName">Location is fetched in the background</string>
    <string name="sessionMonitorServiceTitle">Session Monitor Service</string>
    <string name="sessionMonitorServiceName">Child Monitor is fetching data</string>

    <!--  List Strings  -->
    <string name="listAdapterTitle">List Title</string>
    <string name="listAdapterStartDate">List Start Date</string>
    <string name="listAdapterEndDate">List End Date</string>
    <string name="listAdapterChildDisplayName">Child Display Name</string>
    <string name="listAdapterTotalTime">Total Time:</string>
    <string name="homeScreenText">Home Screen</string>
    <string name="smartParentApplicationText">Smart Parental</string>

</resources>
