<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7EBE6"
    tools:context=".RegisterRoleSelectionActivity">


    <Button
        android:id="@+id/createChildAcc"
        android:layout_width="240sp"
        android:layout_height="80sp"
        android:background="@drawable/login_roundbutton"
        android:text="@string/createChildAccount"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <Button
        android:id="@+id/backToLogin"
        android:layout_width="240sp"
        android:layout_height="80sp"
        android:textSize="18sp"
        android:background="@drawable/login_roundbutton"
        android:text="@string/registerBackButton"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <Button
        android:id="@+id/createParentAcc"
        android:layout_width="240sp"
        android:layout_height="80sp"
        android:background="@drawable/login_roundbutton"
        android:text="@string/createParentAccount"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />
</androidx.constraintlayout.widget.ConstraintLayout>